<resources>
    <string name="app_name">Software Merchant</string>
    <string name="myApps">My Apps</string>
    <string name="categories">Categories</string>
    <string name="music">Music</string>
    <string name="social">Social</string>
    <string name="gaming">Gaming</string>
    <string name="news">News</string>
    <string name="tools">Tools</string>
    <string name="recommendations">Recommendations</string>
    <string name="category">Category: </string>
    <string name="download_count">Download Count: </string>
    <string name="download">Download</string>
    <string name="version">Version:</string>
    <string name="top_apps">Populars</string>
    <string name="no42">42</string>
    <string name="addApp">Add App</string>
    <string name="example_app_name">Example App</string>
    <string name="example_version_number">1.12.3</string>
    <string name="enter_app_name">App Name: </string>
    <string name="enter_category">Enter Category Number</string>
    <string name="enter_download_count">Enter Download Count</string>
    <string name="enter_version_number">Enter Version Number</string>
    <string name="recommendations_short">Recommend</string>
    <string name="remove">Remove</string>
    <string name="download_error">App is already downloaded</string>
    <string name="remove_error">App is not downloaded</string>
    <string name="download_success">App Downloaded</string>
    <string name="remove_success">App is removed</string>
</resources>
