<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <EditText
        android:id="@+id/addAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_app_name"/>

    <EditText
        android:id="@+id/addAppCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_category"/>

    <EditText
        android:id="@+id/addAppDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_download_count"/>

    <EditText
        android:id="@+id/addAppVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_version_number"/>

    <Button
        android:id="@+id/addAppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addApp"/>

</LinearLayout>