<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appActivityHeader"
        android:textSize="@dimen/header"
        android:textColor="@color/header"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        tools:text="App Name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appActivityCategoryName"
            android:textSize="@dimen/sp20"
            android:textColor="@android:color/black"
            android:text="@string/category"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appActivityDownloadCount"
            android:textSize="@dimen/sp20"
            android:textColor="@android:color/black"
            android:text="@string/download_count"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appActivityVersions"
            android:textSize="@dimen/sp20"
            android:textColor="@android:color/black"
            android:text="@string/version"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appActivityDownloadButton"
            android:text="@string/download"
            android:textSize="@dimen/sp20"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appActivityRemoveButton"
            android:text="@string/remove"
            android:textSize="@dimen/sp20"/>

    </LinearLayout>

</LinearLayout>